--- a/demo.html
+++ b/demo.html
@@ -36,6 +36,7 @@
   <header>
 
   </header>
+  
   <div role="main">
 
     
@@ -63,6 +64,7 @@
     </ul>  
 
   </div>
+  
   <footer>
 
   </footer>
@@ -76,6 +78,7 @@
 
   <!-- scripts concatenated and minified via build script -->
   <script src="js/plugins.js"></script>
+  <script src="js/sexyDrop.js"></script>
   <script src="js/script.js"></script>
   <!-- end scripts -->
 
