--- a/demo.html
+++ b/demo.html
@@ -78,7 +78,7 @@
 
   <!-- scripts concatenated and minified via build script -->
   <script src="js/plugins.js"></script>
-  <script src="js/sexyDrop.js"></script>
+  <script src="js/sexyDrop.min.js"></script>
   <script src="js/script.js"></script>
   <!-- end scripts -->
 
